# data-agents

./: .dockerignore  .env.example  .gitignore  CLI_COMMANDS.md  CODEOWNER  CONTRIBUTING.md  Contribution.md  Dockerfile  README.md  REPO_STRUCTURE.md  cloudbuild.yaml  framework_demo_c.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.ts  upload_gcp.py
EXAMPLES/: Example.ipynb
api/: main.py
app/: globals.css  page.tsx
archive/: CODEOWNER  README_old.md  REQUIREMENTS.md  demo_c_with_optional_fintech_csv_input.py
cli/: __init__.py  __main__.py
components/: datasets-panel.tsx  hero-banner.tsx  log-panel.tsx  mode-toggle.tsx  pdf-export.tsx  reasoning-panel.tsx  resizable-panel.tsx  signup-success-modal.tsx
data/: run_logs.jsonl
datasets/: README.md  customer_support_tickets.csv  product_reviews_demo.csv  sample_file_upload.json  workflow_painpoints_demo.csv
engine/: config.py
examples/: accuracy_threshold_script.py  agentic_ai_langchain_using_OPENAI.ipynb  app.py  data_agent_demo.ipynb  database.db  requirements.txt  synthetic_data_generating.py  synthetic_dataset.json  table_example.csv  text_example.txt
lib/: auth.ts  onboarding-service.ts  profile-service.ts  settings-service.ts  supabase.ts
mcp-server/: index.ts  package.json
opengraph_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
prompts/: extraction_prompt.md
scripts/: backend.py  create-onboarding-table.sql  create-user-profiles-table.sql  create-user-settings-table.sql
tests/: test_api_graph_from_gcs.py  (+11 more)
(+82 files in other folders)
