[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opengraph-ai"
version = "0.1.0"
description = "Minimal OpenGraph AI scaffold"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "typer>=0.12.0",
  "openai>=1.30.0",
  "matplotlib>=3.9.0",
  "networkx>=3.3",
  "pypdf>=5.1.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0"]

[project.scripts]
opengraph = "cli.__main__:app"

[tool.setuptools.packages.find]
include = ["cli*", "engine*", "api*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
